[package]
name = "radio-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = [ "event-stream"] }
directories = "5.0.1"
futures = "0.3.31"
lazy_static = "1.5.0"
ratatui = "0.29.0"
tokio= {version="1", features=["full"]}
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
